fixed button css on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -190,7 +190,6 @@ body {
 
 .home-sec-1 .btn-default {
   margin-bottom: 3rem;
-  width: 25%;
   border: 0;
   background-color: #c7a891;
   color: #fff;
